--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <img src="./assets/dev-sorteio.png">
+    <img class="dado-img" src="./assets/dev-sorteio.png">
 
     <h2>Sortear um Número</h2>
 
